# maps

./: NRF _ Top 100 Retailers 2024 List.html  README.md  data.py  extract_top_100.py  get_bq_osm_stores.sql  main.py  maps_client.py  nearby.py  osm.py  pyproject.toml  store_types.json  top_100_retailers.json  top_100_retailers_with_expanded.json
templates/: base.html  competitors.html  index.html  search.html
