[project]
name = "maps"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jeff Grover", email = "jeff.grover@marketdial.com"},
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "googlemaps>=4.10.0",
    "fastapi>=0.115.4",
    "jinja2>=3.1.4",
    "uvicorn>=0.32.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MarketDial"}


[tool.pdm]
distribution = false
